@@ -6,9 +6,9 @@ DIST libvirt-0.9.10-bp-1.tar.bz2 4359 RMD160 1b064c56007001f509cd0e940ec337d6281
 DIST libvirt-0.9.10.tar.gz 19085438 RMD160 8f103b176fc7b943a88cf7196709865edc5db5e8 SHA1 cf32d6bea295cb30461901d987f049c9547ff1e8 SHA256 5b81d9f054ee4b395b0ab4f59845d082baaa6d6c2a038c966309156dde16e11d
 DIST libvirt-0.9.6.tar.gz 17326676 RMD160 5e0837e8ee770e017e574fd002e9e489e448ca65 SHA1 9fd108e1a351d191c5d7f89458096fb35bd6413e SHA256 ce29b1cd3067b224aa834fec2a93d7613c0e72bc035760ad536a2142430bc02b
 DIST libvirt-0.9.8.tar.gz 18403525 RMD160 51bfb25dbd11a7cb5529c692d843f8ac2b1c9101 SHA1 09df699513af63b73444d776c2d02945dc9cee43 SHA256 31b20864e44bb18a2d01b7ac6569f114cbe1007689219bf24a07ddb7528abe0e
-EBUILD libvirt-0.9.10-r3.ebuild 8067 RMD160 c547e06aeaf2318921211bb3f3c5b68aa70fd9d0 SHA1 55d049dad8d58a849ee8137ba21ce4249528b1b7 SHA256 4e96acd17e10d75a142a4291e24c433c2a73426abea8db3238f72fb331201783
+EBUILD libvirt-0.9.10-r3.ebuild 8071 RMD160 07f68c788384c9e1fa3542da3a70490d1505ac14 SHA1 34620fee8bfddfecf0b4ea21ad39fe48b46ba8dc SHA256 6ddab58277552edf77496bc0e9c6436a9625f77c1e6ce5ba820b1770e08abb1f
 EBUILD libvirt-0.9.6.ebuild 7907 RMD160 bf6ee27bc31c83544d172c639b05b59b3279c7dd SHA1 8ab9af963271485e43a656c2286cc431a3a15d09 SHA256 79b46ae24402a19f334fb6bdc02fab634f43c254dff0331c40aecc5b888ca04b
 EBUILD libvirt-0.9.8.ebuild 8148 RMD160 3767bd9427a9e104017b30d8a7d6654f1181592e SHA1 58e27d3fda8a63e5856838e475efc46d21b9c54f SHA256 0049122ad13fbf6d33e41d669029c12be2073ed6d198ed43a24ad732b5aceb19
-EBUILD libvirt-9999.ebuild 8132 RMD160 d27399ca2732d011dcdd8062766d081f323309ce SHA1 c9a9eb9174f514b3bcd2374558cb1fadcadbfc02 SHA256 36c5fc34e54bf5cf819dc291e9890e54bdac81bb81cec69a496716a5e2f77b1d
-MISC ChangeLog 33105 RMD160 bee6864d1f467e0437cc2852091e957f9501879e SHA1 b09629e81a467566ed7d1670fc13cacaf21ff5f0 SHA256 4cba3671c72dc114f24e45a93731b84c6f46517fde7cdf6efca4503b51ab8eb6
+EBUILD libvirt-9999.ebuild 8067 RMD160 f35b8c23984e5b6245dbbb5b3116aea829457623 SHA1 05ec68a222022b855ae0d1d35a07060eb29aa8d8 SHA256 83a80340091c821e95ba48013be2797ade036da406d9b24e31b8bb0c262aeebb
+MISC ChangeLog 33294 RMD160 ec9d0fce4554bacf161bb415dfd71f27e323de9f SHA1 f15247b79b396ff440c7eeb9f7936239a0eed17e SHA256 9e3d3cb23b78c30c55f9da48fdc3eacf274d5b468ba580e3ef57e6736873bb39
 MISC metadata.xml 3132 RMD160 066870c02fd835f9a633b69328367737d4cc0b71 SHA1 940cc910ef4d1a75947afef95d73a3026bb91527 SHA256 e0eb882799f41f51c9930a1142cf5427061bdacf629a028ac4e8b65c1cf67ea4
