@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.161 2012/02/23 16:34:57 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.162 2012/03/01 10:07:31 cardoe Exp $
+
+  01 Mar 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.10-r3.ebuild,
+  libvirt-9999.ebuild:
+  Drop the json USE flag since using the HMP over QMP in qemu isn't supported
+  anymore.
 
 *libvirt-0.9.10-r3 (23 Feb 2012)
 
